--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
-<link rel="stylesheet" href="bluestyle.css">
+<p>Day la gion moi</p>
 </body>
 </html>
